--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html , body, #root {
+        @apply h-full bg-backdrop text-white antialiased
+    }
+    #root{
+        @apply flex flex-col
+    }
+    .wrapper{
+        height: calc(100% - theme("spacing.5"));
+        @apply flex
+    }
+}
