--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -14,4 +14,7 @@
         height: calc(100% - theme("spacing.24"));
         @apply flex
     }
+    nav a.active{
+        @apply bg-active
+    }
 }
